src/api/cli/snapshots/roadster__api__cli__tests__parse_cli@case_03.snap
---
source: src/api/cli/mod.rs
expression: roadster_cli
---
skip_validate_config = true
allow_dangerous = false
