src/api/cli/snapshots/roadster__api__cli__tests__parse_cli@case_2.snap
---
source: src/cli/mod.rs
expression: roadster_cli
---
environment = 'test'
skip_validate_config = false
allow_dangerous = false
