src/api/cli/snapshots/roadster__api__cli__tests__parse_cli@list_routes.snap
---
source: src/api/cli/mod.rs
expression: roadster_cli
---
skip_validate_config = false
allow_dangerous = false

[command]
type = 'Roadster'
[command.command]
type = 'ListRoutes'
